kernel/atomgit/apparmor_ 禁用调试时宏定义引发编译失败.txt
#标题
apparmor: 禁用调试时宏定义引发编译失败

#内核版本
OLK-6.6

#问题现象
在禁用内核调试选项的情况下编译 AppArmor 模块时，编译过程报错终止，提示变量未使用。具体表现为 GCC 检测到 `unused variable` 并触发 `-Werror=unused-variable` 错误。

#主要错误日志
security/apparmor/file.c: In function ‘__file_sock_perm’:
security/apparmor/file.c:544:24: error: unused variable ‘sock’ [-Werror=unused-variable]
  544 |         struct socket *sock = (struct socket *) file->private_data;
      |                        ^~~~

#问题根因
宏 `AA_BUG_FMT` 在调试模式禁用时（`#else` 分支），原实现仅展开为 `no_printk(fmt, ##args)`。这导致宏参数中的条件表达式 `X` 被完全忽略未使用。当代码中定义了变量并在该宏的条件中引用时（如 `AA_BUG_FMT(condition_with_var, ...)`），若调试关闭，该变量在编译后变为事实上的“未使用变量”，从而触发编译错误。

#解决方案
修改 `AA_BUG_FMT` 宏定义，在调试禁用的分支中增加 `BUILD_BUG_ON_INVALID(X)` 语句。此举确保即使调试关闭，编译器也会解析并验证条件表达式 `X` 的有效性，从而引用相关变量，消除“未使用变量”的编译警告与错误。

#来源
https://atomgit.com/openeuler/kernel/commit/594464a767353479aeb496e91bc3f8315fac5c95